--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Amatic SC", sans-serif}
        <h1><b>ALOHA</b> <span class="w3-right w3-tag w3-dark-grey w3-round">$ 23 K</span></h1>
       <p class="w3-text-grey">Salsa de la casa, queso mozzarella, jamón ahumado y piña asada</p>
       <hr>
-		<h1><b>MIEL MOSTAZA</b> <span class="w3-right w3-tag w3-dark-grey w3-round">$ 23 K </span></h1>
+	<h1><b>MIEL MOSTAZA</b> <span class="w3-right w3-tag w3-dark-grey w3-round">$ 23 K </span></h1>
       <p class="w3-text-grey">Salsa de la casa, queso mozzarella, duxelle de hongos, pollo en salas miel mostaza y especias</p>
       <hr>      
       
@@ -153,6 +153,8 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Amatic SC", sans-serif}
   <div class="w3-xlarge w3-section">
     <i class="fa fa-facebook-official w3-hover-opacity"></i>
     <i class="fa fa-instagram w3-hover-opacity"></i>
+<img src="https://raw.githubusercontent.com/Clandestinepizza/Clandestinepizza.github.io/master/img/Instagram.jpg" class="w3-image w3-greyscale" style="width:100%;" id="myMap">
+	  
     <i class="fa fa-snapchat w3-hover-opacity"></i>
     <i class="fa fa-pinterest-p w3-hover-opacity"></i>
     <i class="fa fa-twitter w3-hover-opacity"></i>
