--- a/index.html
+++ b/index.html
@@ -150,10 +150,13 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Amatic SC", sans-serif}
 <!-- Footer -->
 <footer class="w3-center w3-black w3-padding-64">
   <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
-  <div class="w3-xlarge w3-section">
-    <i class="fa fa-facebook-official w3-hover-opacity"></i>
-    <i class="fa fa-instagram w3-hover-opacity"></i>
-<img src="https://raw.githubusercontent.com/Clandestinepizza/Clandestinepizza.github.io/master/img/Instagram.jpg" class="w3-image w3-greyscale" style="width:100%;" id="myMap">
+
+	<div class="social">
+		<ul>
+			<li><a href="https://www.facebook.com/clandestinepizza/" target="_blank" class="icon-facebook"></a></li>
+			<li><a href="mailto:clandestinepizzaartesanal@gmail.com" class="icon-mail"></a></li>
+		</ul>
+	</div>
 	  
     <i class="fa fa-snapchat w3-hover-opacity"></i>
     <i class="fa fa-pinterest-p w3-hover-opacity"></i>
