--- a/index.html
+++ b/index.html
@@ -146,6 +146,13 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Amatic SC", sans-serif}
     <h1 class="w3-center w3-jumbo" style="margin-bottom:64px">Contactanos</h1>
     <p>Realizamos domicilios en el sector occidental de la calle 80 o de acuerdo a tu pedido podemos llevarlo a donde estes.</p>
     <p><span class="w3-tag">!</span> Visitanos en nuestras redes sociales.</p>
+	<div class="social">
+		<ul>
+			<li><a href="https://www.facebook.com/clandestinepizza/" target="_blank" class="icon-facebook"></a></li>
+			<li><a href="mailto:clandestinepizzaartesanal@gmail.com" class="icon-mail"></a></li>
+		</ul>
+	</div>	  
+	  
 
 <!-- Footer -->
 <footer class="w3-center w3-black w3-padding-64">
@@ -157,11 +164,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Amatic SC", sans-serif}
 			<li><a href="mailto:clandestinepizzaartesanal@gmail.com" class="icon-mail"></a></li>
 		</ul>
 	</div>
-	  
-    <i class="fa fa-snapchat w3-hover-opacity"></i>
-    <i class="fa fa-pinterest-p w3-hover-opacity"></i>
-    <i class="fa fa-twitter w3-hover-opacity"></i>
-    <i class="fa fa-linkedin w3-hover-opacity"></i>
+
   </div>
   <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css</a></p>
 </footer>
