--- a/index.html
+++ b/index.html
@@ -146,6 +146,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Amatic SC", sans-serif}
     <h1 class="w3-center w3-jumbo" style="margin-bottom:64px">Contactanos</h1>
     <p>Realizamos domicilios en el sector occidental de la calle 80 o de acuerdo a tu pedido podemos llevarlo a donde estes.</p>
     <p><span class="w3-tag">!</span> Visitanos en nuestras redes sociales.</p>
+	  </div>
 	<div class="social">
 		<ul>
 			<li><a href="https://www.facebook.com/clandestinepizza/" target="_blank" class="icon-facebook"></a></li>
@@ -156,14 +157,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Amatic SC", sans-serif}
 
 <!-- Footer -->
 <footer class="w3-center w3-black w3-padding-64">
-  <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
-
-	<div class="social">
-		<ul>
-			<li><a href="https://www.facebook.com/clandestinepizza/" target="_blank" class="icon-facebook">FACE</a></li>
-			<li><a href="mailto:clandestinepizzaartesanal@gmail.com" class="icon-mail"></a></li>
-		</ul>
-	</div>
+  <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>INICIO</a>
 
   </div>
   <p>Hecho en casa <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green"></a></p>
