--- a/index.html
+++ b/index.html
@@ -149,12 +149,22 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Amatic SC", sans-serif}
 	  </div>
 	<div class="social">
 		<ul>
-			<li><a href="https://www.facebook.com/clandestinepizza/" target="_blank" class="icon-facebook"></a></li>
+			li><a href="https://www.facebook.com/clandestinepizza/" target="_blank" class="icon-facebook"></a></li>
 			<li><a href="mailto:clandestinepizzaartesanal@gmail.com" class="icon-mail"></a></li>
 		</ul>
 	</div>	  
 	  
-
+	</div>
+	
+	<div class="shared-panel">
+	<span>Compartir icones redondos</span><br>
+	<a target="_blank" class="shared fb" title="Facebook"></a>	
+	<a target="_blank" class="shared tt" title="Twitter"></a>
+	<a target="_blank" class="shared gp" title="Google+"></a>
+	<a  data-action='share/whatsapp/share' class="shared wa" title="WhatsApp"></a>
+	<a target="_blank" class="shared ce" id="sml" title="Email"></a>		
+	</div>
+	
 <!-- Footer -->
 <footer class="w3-center w3-black w3-padding-64">
   <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>INICIO</a>
