--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Amatic SC", sans-serif}
 	
 	<div class="shared-panel">
 	<span>Compartir icones redondos</span><br>
-	<a target="_blank" class="shared fb" title="Facebook"></a>	
+	<a target="_blank" class="shared fb" title="Facebook">Facebook</a>	
 	<a target="_blank" class="shared tt" title="Twitter"></a>
 	<a target="_blank" class="shared gp" title="Google+"></a>
 	<a  data-action='share/whatsapp/share' class="shared wa" title="WhatsApp"></a>
