--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Amatic SC", sans-serif}
 	  </div>
 	<div class="social">
 		<ul>
-			li><a href="https://www.facebook.com/clandestinepizza/" target="_blank" class="icon-facebook"></a></li>
+			<li><a href="https://www.facebook.com/clandestinepizza/" target="_blank" class="icon-facebook"></a></li>
 			<li><a href="mailto:clandestinepizzaartesanal@gmail.com" class="icon-mail"></a></li>
 		</ul>
 	</div>	  
