--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Amatic SC", sans-serif}
 </div>
 
 <!-- Image of location/map -->
-<img src="/w3images/map.jpg" class="w3-image w3-greyscale" style="width:100%;" id="myMap">
+<img src="https://raw.githubusercontent.com/Clandestinepizza/Clandestinepizza.github.io/master/img/Clandestine.jpg" class="w3-image w3-greyscale" style="width:100%;" id="myMap">
 
 <!-- Contact -->
 <div class="w3-container w3-padding-64 w3-blue-grey w3-grayscale-min w3-xlarge">
@@ -151,7 +151,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Amatic SC", sans-serif}
   <!-- Footer -->
   <footer class="w3-container w3-padding-64 w3-light-white w3-center w3-opacity w3-xlarge" style="margin:-24px">
     <i class="fa fa-facebook-official w3-hover-opacity"></i>
-    <i class="fa fa-instagram ">@Clandestine</i>
+    <i class="fa fa-instagram ">@clandestinepizza</i>
     <i class="fa fa-twitter w3-hover-opacity"></i>
     <p class="w3-medium">Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank" class="w3-hover-text-green">w3.css</a></p>
   <!-- End footer -->
