--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Amatic SC", sans-serif}
 </div>
 
 <!-- Image of location/map -->
-<img src="https://raw.githubusercontent.com/Clandestinepizza/Clandestinepizza.github.io/master/img/Clandestine.jpg" width="1000" height="500" id="myMap">
+<div align="center"><img src="https://raw.githubusercontent.com/Clandestinepizza/Clandestinepizza.github.io/master/img/Clandestine.jpg" width="1000" height="500" id="myMap"></div>
 
 <!-- Contact -->
 <div class="w3-container w3-padding-64 w3-blue-grey w3-grayscale-min w3-xlarge">
