--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Amatic SC", sans-serif}
 <div class="w3-container w3-padding-64 w3-red w3-grayscale w3-xlarge" id="about">
   <div class="w3-content">
     <h1 class="w3-center w3-jumbo" style="margin-bottom:64px"QUIENES SOMOS</h1>
-    <p>Somos la nueva opción en comida rápida pero con el toque saludable, nuestras pizzas contienen ingredientes seleccionados que hacen que nuestro sabor sea diferente e inigualable. Cada bocado será una experiencia de sabor para tus pailas gustativas.</p>
+    <p>Somos la nueva opción en comida rápida pero con el toque saludable, nuestras pizzas contienen ingredientes seleccionados que hacen que nuestro sabor sea diferente e inigualable. Cada bocado será una experiencia de sabor para tus papilas gustativas.</p>
     <p><strong>Somos diferentes a los demás, nuestras pizzas no tiene comparación</strong></p> 
     <p>Pruebalas y disfruta de un nuevo sabor <img src="/w3images/chef.jpg" style="width:150px" class="w3-circle w3-right" alt="Chef"></p>
     <p>Pizza de calidad a un bajo costo .</p>
