--- a/index.html
+++ b/index.html
@@ -147,6 +147,10 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Amatic SC", sans-serif}
     <p>Realizamos domicilios en el sector occidental de la calle 80 o de acuerdo a tu pedido podemos llevarlo a donde estes.</p>
     <p><span class="w3-tag">!</span> Visitanos en nuestras redes sociales.</p>
 <p><i class="fa fa-phone fa-fw w3-xxlarge w3-margin-right"></i> Whatsapp: 322 8589151</p>
+<div id="whatsapp-icon" style="position:fixed; left:10px; bottom:10px; text-align:center; padding:3px">
+<a href="https://api.whatsapp.com/send?phone=+3228589151">
+<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6b/WhatsApp.svg/240px-WhatsApp.svg.png" width="50" height="50"></a>
+</div>
  <a href="https://www.facebook.com/clandestinepizza/" target="_blank"><img alt="Siguenos en Facebook" src="https://lh6.googleusercontent.com/-CYt37hfDnQ8/T3nNydojf_I/AAAAAAAAAr0/P5OtlZxV4rk/s32/facebook32.png" width=32 height=32/></a> 
  <a href="https://www.instagram.com/clandestinepizza/?hl=es-la" target="_blank"><img alt="Siguenos en Instagram" src="https://lh5.googleusercontent.com/-vBqtz2iv2BE/UIqE3LQyFMI/AAAAAAAABgA/TJ4W-vIBjsc/s32/instagram32.png" width=32 height=32  /></a>
 	  
