--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Amatic SC", sans-serif}
  </div>
 <div align="center" id="whatsapp-icon" style="position:fixed; left:10px; bottom:10px; text-align:center; padding:3px">
 <a href="https://api.whatsapp.com/send?phone=+573228589151">
-<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6b/WhatsApp.svg/240px-WhatsApp.svg.png" width="50" height="50"></a>
+<img align="center" src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6b/WhatsApp.svg/240px-WhatsApp.svg.png" width="50" height="50"></a>
 </div>
 
 	<script>
