--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Amatic SC", sans-serif}
 <div class="w3-container w3-padding-64 w3-blue-grey w3-grayscale-min w3-xlarge">
   <div class="w3-content">
     <h1 class="w3-center w3-jumbo" style="margin-bottom:64px">Contactanos</h1>
-    <p>Realizamos domicilios en el sector occidental de la calle 80 o de acuerdo a tu pedido podemos llevarlo a donde estes.</p>
+    <p><h2>Realizamos domicilios en el sector occidental de la calle 80 o de acuerdo a tu pedido podemos llevarlo a donde estes.</p></h2>
     <p><span class="w3-tag">!</span> Visitanos en nuestras redes sociales.</p>
  <a href="https://www.facebook.com/clandestinepizza/" target="_blank"><img alt="Siguenos en Facebook" src="https://lh6.googleusercontent.com/-CYt37hfDnQ8/T3nNydojf_I/AAAAAAAAAr0/P5OtlZxV4rk/s32/facebook32.png" width=32 height=32/></a> 
  <a href="https://www.instagram.com/clandestinepizza/?hl=es-la" target="_blank"><img alt="Siguenos en Instagram" src="https://lh5.googleusercontent.com/-vBqtz2iv2BE/UIqE3LQyFMI/AAAAAAAABgA/TJ4W-vIBjsc/s32/instagram32.png" width=32 height=32  /></a>
