--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Amatic SC", sans-serif}
 	<h1><b>MIEL MOSTAZA</b> <span class="w3-right w3-tag w3-dark-grey w3-round">$ 23 K </span></h1>
       <p class="w3-text-grey">Salsa de la casa, queso mozzarella, duxelle de hongos, pollo en salas miel mostaza y especias</p>
       <hr>      
-      <h1>Todas nuestras pizzas estan hechas en masas maduradas</h1>
-  </div>
+     </div>
+<h1><p>Todas nuestras pizzas estan hechas en masas maduradas</h1></p>	  
 </div>
 
 <!-- About Container -->
@@ -115,9 +115,9 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Amatic SC", sans-serif}
     <h1 class="w3-center w3-jumbo" style="margin-bottom:64px">QUIENES SOMOS</h1>
     <p>Somos la nueva opción en comida rápida pero con el toque saludable, nuestras pizzas contienen ingredientes seleccionados que hacen que nuestro sabor sea diferente e inigualable. Cada bocado será una experiencia de sabor para tus papilas gustativas.</p>
     <p><strong>Somos diferentes a los demás, nuestras pizzas no tiene comparación</strong></p> 
-    <p>Pruebalas y disfruta de un nuevo sabor <img src="/w3images/chef.jpg" style="width:150px" class="w3-circle w3-right" alt="Chef"></p>
+    <p>Pruebalas y disfruta de un nuevo sabor
     <p>Pizza de calidad a un bajo costo .</p>
-    <img src="/w3images/onepage_restaurant.jpg" style="width:100%" class="w3-margin-top w3-margin-bottom" alt="Restaurant">
+    <img src="https://raw.githubusercontent.com/Clandestinepizza/Clandestinepizza.github.io/master/img/IMG_1912.jpg" style="width:90%" class="w3-margin-top w3-margin-bottom" alt="Restaurant">
     <h1><b>Horario de atención</b></h1>
     
     <div class="w3-row">
