--- a/index.html
+++ b/index.html
@@ -113,11 +113,11 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Amatic SC", sans-serif}
 <div class="w3-container w3-padding-64 w3-red w3-grayscale w3-xlarge" id="about">
   <div class="w3-content">
     <h1 class="w3-center w3-jumbo" style="margin-bottom:64px">QUIENES SOMOS</h1>
-    <p>Somos la nueva opción en comida rápida pero con el toque saludable, nuestras pizzas contienen ingredientes seleccionados que hacen que nuestro sabor sea diferente e inigualable. Cada bocado será una experiencia de sabor para tus papilas gustativas.</p>
+    <h1><p>Somos la nueva opción en comida rápida pero con el toque saludable, nuestras pizzas contienen ingredientes seleccionados que hacen que nuestro sabor sea diferente e inigualable. Cada bocado será una experiencia de sabor para tus papilas gustativas.</p>
     <p><strong>Somos diferentes a los demás, nuestras pizzas no tiene comparación</strong></p> 
     <p>Pruebalas y disfruta de un nuevo sabor
-    <p>Pizza de calidad a un bajo costo .</p>
-    <img src="https://raw.githubusercontent.com/Clandestinepizza/Clandestinepizza.github.io/master/img/IMG_1912.jpg" style="width:90%" class="w3-margin-top w3-margin-bottom" alt="Restaurant">
+    <p>Pizza de calidad a un bajo costo .</p></h1>
+    <img src="https://raw.githubusercontent.com/Clandestinepizza/Clandestinepizza.github.io/master/img/IMG_1912.jpg" style="width:100%" class="w3-margin-top w3-margin-bottom" alt="Restaurant">
     <h1><b>Horario de atención</b></h1>
     
     <div class="w3-row">
