--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Amatic SC", sans-serif}
       <p class="w3-text-grey">Salsa de la casa, queso mozzarella, duxelle de hongos, pollo en salas miel mostaza y especias</p>
       <hr>      
      </div>
-<h1><p>Todas nuestras pizzas estan hechas en masas maduradas</h1></p>	  
+<h1><p><aling="center">Todas nuestras pizzas estan hechas en masas maduradas</h1></p>	  
 </div>
 
 <!-- About Container -->
@@ -117,7 +117,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Amatic SC", sans-serif}
     <p><strong>Somos diferentes a los demás, nuestras pizzas no tiene comparación</strong></p> 
     <p>Pruebalas y disfruta de un nuevo sabor
     <p>Pizza de calidad a un bajo costo .</p></h1>
-    <img src="https://raw.githubusercontent.com/Clandestinepizza/Clandestinepizza.github.io/master/img/IMG_1912.jpg" style="width:100%" class="w3-margin-top w3-margin-bottom" alt="Restaurant">
+    <img src="https://raw.githubusercontent.com/Clandestinepizza/Clandestinepizza.github.io/master/img/IMG_1912.jpg" style="width:100%">
     <h1><b>Horario de atención</b></h1>
     
     <div class="w3-row">
