--- a/index.html
+++ b/index.html
@@ -106,7 +106,8 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Amatic SC", sans-serif}
       <p class="w3-text-grey">Salsa de la casa, queso mozzarella, duxelle de hongos, pollo en salas miel mostaza y especias</p>
       <hr>      
      </div>
-<h1><p><aling="center">Todas nuestras pizzas estan hechas en masas maduradas</h1></p>	  
+
+	<h1 class="w3-center w3-jumbo" style="margin-bottom:64px">Todas nuestras pizzas estan hechas en masas maduradas</h1> 
 </div>
 
 <!-- About Container -->
