--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Amatic SC", sans-serif}
     <p><strong>Somos diferentes a los demás, nuestras pizzas no tiene comparación</strong></p> 
     <p>Pruebalas y disfruta de un nuevo sabor
     <p>Pizza de calidad a un bajo costo .</p></h1>
-    <img src="https://raw.githubusercontent.com/Clandestinepizza/Clandestinepizza.github.io/master/img/IMG_1912.jpg" style="width:100%">
+    <img src="https://raw.githubusercontent.com/Clandestinepizza/Clandestinepizza.github.io/master/img/IMG_1912.jpg" width="1000" height="500">
     <h1><b>Horario de atención</b></h1>
     
     <div class="w3-row">
@@ -139,7 +139,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Amatic SC", sans-serif}
 </div>
 
 <!-- Image of location/map -->
-<div align="center"><img src="https://raw.githubusercontent.com/Clandestinepizza/Clandestinepizza.github.io/master/img/Clandestine.jpg" width="1000" height="500" id="myMap"></div>
+<div align="center"><img src="https://raw.githubusercontent.com/Clandestinepizza/Clandestinepizza.github.io/master/img/Clandestine.jpg" width="1000" height="500" id="Logo"></div>
 
 <!-- Contact -->
 <div class="w3-container w3-padding-64 w3-blue-grey w3-grayscale-min w3-xlarge">
