--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Amatic SC", sans-serif}
       <p class="w3-text-grey">Salsa de la casa, queso mozzarella, jamón ahumado y piña asada</p>
       <hr>
 	<h1><b>MIEL MOSTAZA</b> <span class="w3-right w3-tag w3-dark-grey w3-round">$ 23 K </span></h1>
-      <p class="w3-text-grey">Salsa de la casa, queso mozzarella, duxelle de hongos, pollo en salas miel mostaza y especias</p>
+      <p class="w3-text-grey">Salsa de la casa, queso mozzarella, duxelle de hongos, pollo en salsa miel mostaza y especias</p>
       <hr>      
      </div>
 
@@ -150,9 +150,9 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Amatic SC", sans-serif}
  <a href="https://www.facebook.com/clandestinepizza/" target="_blank"><img alt="Siguenos en Facebook" src="https://lh6.googleusercontent.com/-CYt37hfDnQ8/T3nNydojf_I/AAAAAAAAAr0/P5OtlZxV4rk/s32/facebook32.png" width=32 height=32/></a> 
  <a href="https://www.instagram.com/clandestinepizza/?hl=es-la" target="_blank"><img alt="Siguenos en Instagram" src="https://lh5.googleusercontent.com/-vBqtz2iv2BE/UIqE3LQyFMI/AAAAAAAABgA/TJ4W-vIBjsc/s32/instagram32.png" width=32 height=32  /></a>
  </div>
-<div align="center" id="whatsapp-icon" style="position:fixed; center:10px; bottom:10px; text-align:center; padding:3px">
+
 <a href="https://api.whatsapp.com/send?phone=+573228589151">
-<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6b/WhatsApp.svg/240px-WhatsApp.svg.png" width="50" height="50"></a>
+<div align="center"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6b/WhatsApp.svg/240px-WhatsApp.svg.png" width="50" height="50"></a>
 </div>
 
 	<script>
