--- a/index.html
+++ b/index.html
@@ -148,11 +148,9 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Amatic SC", sans-serif}
     <p><h1>Realizamos domicilios en el sector occidental de la calle 80 o de acuerdo a tu pedido podemos llevarlo a donde estes.</p>
     <p><span class="w3-tag">!</span> Visitanos en nuestras redes sociales.</p></h1>
  <a href="https://www.facebook.com/clandestinepizza/" target="_blank"><img alt="Siguenos en Facebook" src="https://lh6.googleusercontent.com/-CYt37hfDnQ8/T3nNydojf_I/AAAAAAAAAr0/P5OtlZxV4rk/s32/facebook32.png" width=32 height=32/></a> 
- <a href="https://www.instagram.com/clandestinepizza/?hl=es-la" target="_blank"><img alt="Siguenos en Instagram" src="https://lh5.googleusercontent.com/-vBqtz2iv2BE/UIqE3LQyFMI/AAAAAAAABgA/TJ4W-vIBjsc/s32/instagram32.png" width=32 height=32  /></a>
- </div>
-<a href="https://api.whatsapp.com/send?phone=+573228589151">
-<align="center"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6b/WhatsApp.svg/240px-WhatsApp.svg.png" target="_blank" width="50" height="50"></a>
-
+ <a href="https://www.instagram.com/clandestinepizza/?hl=es-la" target="_blank"><img alt="Siguenos en Instagram" src="https://lh5.googleusercontent.com/-vBqtz2iv2BE/UIqE3LQyFMI/AAAAAAAABgA/TJ4W-vIBjsc/s32/instagram32.png" width=32 height=32 /></a>
+ <a href="https://api.whatsapp.com/send?phone=+573228589151" target="_blank"> <img alt="Escribenos" src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6b/WhatsApp.svg/240px-WhatsApp.svg.png"  width=32 height=32/></a>
+</div>
 
 	<script>
 // Tabbed Menu
