--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Amatic SC", sans-serif}
         <p>5:00 pm a 10:00 pm</p>
       </div>
     </div>
-    <p>Si necesitas un pedido en un horario diferente no dudes en contactarnos que con gusto te atenderemos.
+    <p><h1>Si necesitas un pedido en un horario diferente no dudes en contactarnos que con gusto te atenderemos.</h1>
     </p>
   </div>
 </div>
